@@ -1,3 +1,11 @@
+2004-04-05  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>
+
+	* text-coding.c (ER_BUF_SIZE): New macro.
+	(struct decoding_stream): Use `ER_BUF_SIZE' to specify size of
+	`er_buf'.
+	(decode_add_er_char): Use `ER_BUF_SIZE' instead of 16.
+	(char_encode_as_entity_reference): Use `ER_BUF_SIZE'.
+
 2004-03-24  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>
 
 	* chartab.c (find_char_feature_in_family): New function.
